[package]
name = "glass"
version = "0.1.0"
edition = "2024"
description = "Notification daemon with KDE blur"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
wayland-backend = "0.3"
wayland-scanner = "0.31"
tiny-skia = "0.11"
cosmic-text = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
wayland-scanner = "0.31"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
